первая версия проекта место

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 </div>
                 <button class="profile__add-button" type="button"></button>
             </section>
+
+
             <section class="elements">
                 <ul class="elements-container">
                     <li class="element">
@@ -32,21 +34,21 @@
                         </div>
                     </li>
                     <li class="element">
-                        <img class="element__image" alt="Гора Эльбрус" src="./images/mountain.jpg">
+                        <img class="element__image" alt="Гора Эльбрус" src="./images/view.jpg">
                         <div class="element__description">
                             <p class="element__city">Гора Эльбрус</p>
                             <button class="element__like" type="button"></button>
                         </div>
                     </li>
                     <li class="element">
-                        <img class="element__image" alt="Домбай" src="./images/view.jpg">
+                        <img class="element__image" alt="Домбай" src="./images/mountain.jpg">
                         <div class="element__description">
                             <p class="element__city">Домбай</p>
                             <button class="element__like" type="button"></button>
                         </div>
                     </li>
                     <li class="element">
-                        <img class="element__image" alt="Гора Эльбрус" src="./images/mountain.jpg">
+                        <img class="element__image" alt="Гора Эльбрус" src="./images/view.jpg">
                         <div class="element__description">
                             <p class="element__city">Гора Эльбрус</p>
                             <button class="element__like" type="button"></button>
@@ -54,16 +56,16 @@
                     </li>
                     </li>
                     <li class="element">
-                        <img class="element__image" alt="Домбай" src="./images/view.jpg">
+                        <img class="element__image" alt="Домбай" src="./images/mountain.jpg">
                         <div class="element__description">
                             <p class="element__city">Домбай</p>
                             <button class="element__like" type="button"></button>
                         </div>
                     </li>
                     <li class="element">
-                        <img class="element__image" alt="Карачаевск" src="./images/city.jpg">
+                        <img class="element__image" alt="Карачаево-Черкессия" src="./images/city.jpg">
                         <div class="element__description">
-                            <p class="element__city">Карачаевск</p>
+                            <p class="element__city">Карачаево-Черкессия</p>
                             <button class="element__like" type="button"></button>
                         </div>
                     </li>
@@ -71,6 +73,20 @@
             </section>
         </main>
         <footer class="footer">© 2020 Mesto Russia</footer>
+
+        <div class="popup">
+            <div class="popup__container">
+                <form class="popup__form">
+                    <button class="close-button"></button>
+                    <h2 class="popup__title">Редактировать профиль</h2>
+                    <fieldset class="popup__fields">
+                        <input class="popup__field" type="text" name="name" placeholder="Жак-Ив Кусто">
+                        <input class="popup__field" type="text" name="description" placeholder="Исследователь океана">
+                    </fieldset>
+                    <button class="popup__button" type="submit">Сохранить</button>
+                </form>
+            </div>
+        </div>
     </div>    
 
     
