--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         </section>
       </main>
       <footer class="footer">&copy; 2022 Mesto Russia</footer>
-      <div class="popup">
+
+      <div class="popup" id="popup__edit">
         <div class="popup__container">
           <form class="popup__form" name="edit-button">
             <button
@@ -163,6 +164,13 @@
           </form>
         </div>
       </div>
+
+    <template></template>
+
+      
+
+
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
